# aoc2021

./: .gitignore  Makefile  README.md  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
inputs/: day04-sample2.txt  day13-sample2.txt  day16-sample.txt
src/aoc2021/: __init__.py  __main__.py  commons.py  day01_1.py  day01_2.py  day02_1.py  day02_2.py  day03_1.py  day03_2.py  day04_1.py  day04_2.py  day04_common.py  day05_1.py  day05_2.py  day05_common.py  day06_1.py  day06_2.py  day06_common.py  day07_1.py  day07_2.py  day07_common.py  day08_1.py  day08_2.py  day08_commons.py  day09_1.py  day09_2.py  day09_commons.py  day10_1.py  day10_2.py  day10_common.py  day11_1.py  day11_2.py  day11_common.py  day12_1.py  day12_2.py  day12_common.py  day13_1.py  day13_2.py  day13_common.py  day14_1.py  (+26 more)
src/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py  test_day22.py  utils.py
