[flake8]
max-line-length = 160
enable-extensions = G
select = E,F,W,A,B,C,D,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,X,Y,Z
ignore = E501,E203,W503,B902
format = html
htmldir = out/flake-report
show-source = true
jobs = auto
exclude = 
	__pycache__

[isort]
line_length = 160
multi_line_output = 3

[metadata]
name = aoc2021
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
license = Mozilla Public License Version 2.0
classifiers = 
	Programming Language :: Python :: 3.8
author = David Pochet
maintainer = David Pochet
description = Avent Of Code 2021

[options]
package_dir = =src
packages = find:
setup_requires = wheel
install_requires = 
	wheel

[options.packages.find]
where = src
exclude = tests

[tool:pytest]
testpaths = src/tests
junit_family = xunit2
filterwarnings = 
	ignore::DeprecationWarning
	ignore::pytest.PytestCollectionWarning
addopts = 
	--capture=sys
	--numprocesses=8
	--junit-xml=out/tests/report.xml
	--cov=src
	--cov-report=html:out/coverage-report
	--cov-report=xml:out/coverage.xml
	--cov-report=term
	--cov-config=setup.cfg

[run]
data_file = out/.coverage
concurrency = thread
disable_warnings = no-data-collected
branch = True
omit = src/tests/*

[options.entry_points]
console_scripts = 
	trm-stb = trm_server_stb.__main__:main

